# winsparkle

include/: winsparkle.h
src/: CMakeLists.txt  settings.cpp  ui.cpp  utils.h
